refactor: final 키워드 추가 및 private 메소드로 변경